# MediaPipe_PoseLandmark_Recorder

./: .gitignore  README.md
projects/pose_landmark_recorder/: AGENTS.md  CURRENT_STATE.md  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
projects/pose_landmark_recorder/configs/: motion_profile_default.json  motion_profile_report.md  skeleton_constraints.yaml
projects/pose_landmark_recorder/docs/: README.md  acceptance_exhaustive_verification.md  claude_loop_progress.md  codex_context_min.md  coordinate_system.md  crop_refinement.md  development_notes.md  documentation_policy.md  next_development_plan.md  outlier_minimization.md  packaging_macos.md  quality_flags.md  segment_refinement.md  session_009_exhaustive_verification.md  skeleton_optimization.md  trajectory_export.md
projects/pose_landmark_recorder/models/: README.md
projects/pose_landmark_recorder/scripts/: build_motion_profile.py  build_pipeline_app.py  clean_pose_data.py  crop_refine_pose.py  export_trajectory.py  minimize_pose_outliers.py  open_blender_trajectory.py  optimize_pose_skeleton.py  record_from_video.py  refine_pose_segments.py  report_crosspass_agreement.py  run_full_pipeline.py  write_session_manifest.py
projects/pose_landmark_recorder/tests/: test_blender_coordinate.py  test_bone_constraints.py  test_coordinate_transform.py  test_crop_bbox.py  test_crop_candidate_scorer.py  test_crop_enhancement.py  test_crop_mirror.py  test_crop_refiner.py  test_crop_rotation.py  test_crosspass_agreement.py  test_data_writer.py  test_interpolation.py  test_joint_angle.py  (+16 more)
(+47 files in other folders)
