[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dance-pose-recorder"
version = "0.1.0"
description = "MediaPipe Pose Landmark recorder for JSONL, CSV, and metadata outputs."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "mediapipe",
  "opencv-python",
  "numpy",
  "pandas",
  "tqdm",
  "pyinstaller",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
